--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
@@ -25,7 +26,8 @@
     "react-native-select-dropdown": "^3.4.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^13.14.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
